--- a/src/app/shop/product/sidebar/product-left-sidebar-with-bundle/product-left-sidebar-with-bundle.component.html
+++ b/src/app/shop/product/sidebar/product-left-sidebar-with-bundle/product-left-sidebar-with-bundle.component.html
@@ -123,8 +123,8 @@
                         <!-- <app-stock-inventory [stock]="productkart[0]?.qty"></app-stock-inventory> commented on 22 july by deepak -->
                         <div class="product-description border-product">
                             <h6
-                                style="color: #222222;text-transform: capitalize;font-weight: 400;margin-bottom: 0;font-size: 18px;">
-                                Please select minimum of {{productkart[0]?.minimum}} Pieces
+                                style="color: #222222;text-transform: capitalize;font-weight: 400;margin-bottom: 0;font-size: 20px;">
+                                Please select minimum of <b>{{productkart[0]?.minimum}} </b>Pieces
                                 <span>
                                     <a href="javascrip:void(0)" (click)="SizeChart.openModal()">size
                                         chart</a>
