--- a/src/app/shop/checkout/success/success.component.html
+++ b/src/app/shop/checkout/success/success.component.html
@@ -39,7 +39,8 @@
                             <ul class="order-detail">
                                 <li><span>order ID:</span> {{ orderDetails[0].orderNumber }}</li>
                                 <li><span>Order Date:</span> {{ orderDetails[0].orderDate | date : 'MMM dd, yyyy'}}</li>
-                                <li><span>Order Total:</span> {{ orderDetails[0].totalAmount | currency:productService?.Currency.currency:'symbol' }}
+                                <li><span>Order Total:</span>
+                                    {{ orderDetails[0].totalAmount | currency:productService?.Currency.currency:'symbol' }}
                                 </li>
                                 <!-- <li><span>Payment Method:</span> Credit Card (**3569)</li> -->
                             </ul>
@@ -55,6 +56,7 @@
                         </div>
                     </div>
                 </div>
+                
                 <h4 class="mb-4">Your Order Details</h4>
                 <div class="order-box">
                     <div class="table-responsive-sm">
@@ -117,7 +119,8 @@
                                         {{ product?.gstAmount | currency:productService?.Currency.currency:'symbol'}}
                                     </td>
                                     <td>
-                                        <span style="float: right; font-size: 16px; line-height: 20px;  font-weight: 400;">
+                                        <span
+                                            style="float: right; font-size: 16px; line-height: 20px;  font-weight: 400;">
                                             {{ (product.salePrice*product?.quantity-product?.additionalDiscountAmount+product?.gstAmount) | currency:productService?.Currency.currency:'symbol' }}</span>
                                     </td>
                                 </tr>
@@ -144,7 +147,8 @@
                                         <b>{{ getTotalGSTAmount() | currency:productService?.Currency.currency:'symbol'}}</b>
                                     </td>
                                     <td>
-                                        <span style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
+                                        <span
+                                            style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
                                             {{ getTotal() | currency:productService?.Currency.currency:'symbol'}}</span>
                                     </td>
                                 </tr>
@@ -157,7 +161,8 @@
                                     <td *ngIf="orderDetails[0].orderDetails?.additionalDiscount>0"></td>
                                     <td *ngIf="orderDetails[0].orderDetails?.additionalDiscount>0"></td>
                                     <td colspan="2">
-                                        <span style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
+                                        <span
+                                            style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
                                             <b>Free Packing</b></span>
                                     </td>
                                 </tr>
@@ -168,7 +173,8 @@
                                     <td *ngIf="orderDetails[0].orderDetails?.additionalDiscount>0"></td>
                                     <td *ngIf="orderDetails[0].orderDetails?.additionalDiscount>0"></td>
                                     <td colspan="2">
-                                        <span style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
+                                        <span
+                                            style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
                                             {{ getTotal() | currency:productService?.Currency.currency:'symbol'}}</span>
                                     </td>
                                 </tr>
