--- a/src/app/pages/account/register/register.component.html
+++ b/src/app/pages/account/register/register.component.html
@@ -7,7 +7,7 @@
                 <h4 class="mb-5"><b>Let's start creating your new account.</b></h4>
                 <div class="theme-card">
 
-                    <!-- {{RegistrationForm.value|json}}  -->
+                    <!-- {{RegistrationForm.value|json}} -->
 
                     <form class="theme-form" [formGroup]="RegistrationForm">
                         <!-- <div class="form-group "><input autocomplete="new-password" id="" type="tel"
@@ -23,21 +23,28 @@
                                 <div class="input-group-prepend india-code">
                                     <div class="input-group-text">+91</div>
                                 </div>
-                                <input type="text" id="MobileNumber" class="form-control" [readonly]="mobileverified"
-                                    placeholder="Mobile Number" maxlength="10" autocomplete="off"
+                                <input autofocus type="text" id="MobileNumber" class="form-control"
+                                    [readonly]="mobileverified" (keypress)="keytab($event)" placeholder="Mobile Number"
+                                    maxlength="10" autocomplete="off"
                                     [ngClass]="{ 'is-invalid': submitted && f.mobileNo.errors }"
                                     formControlName="mobileNo">
+
+                                <!-- <div *ngIf="submitted && f.mobileNo.errors" class="invalid-feedback">
+                                    <div>
+                                        Please, Enter 10 digit Mobile Number</div>
+                                </div> -->
                                 <div *ngIf="mobileverified" class="input-group-append">
                                     <span class="input-group-text success-check">
                                         <i class="fa fa-check"></i>
                                     </span>
                                 </div>
 
-                                <div *ngIf="!mobileverified" class="input-group-append">
-                                    <button #otp class="btn btn-sm btn-success" type="button"
-                                        [ngClass]="{'btn-loading': loginStart}" (click)="validateAndCheckMobile();">Send
-                                        OTP</button>
-                                </div>
+                                <!-- <div *ngIf="!mobileverified" class="input-group-append"> -->
+                                <button *ngIf="!mobileverified" #otp class="btn btn-sm btn-success" type="button"
+                                    autofocus [ngClass]="{'btn-loading': loginStart}"
+                                    (click)="validateAndCheckMobile();">Send
+                                    OTP</button>
+                                <!-- </div> -->
                             </div>
 
                         </div>
@@ -63,12 +70,13 @@
 
                                 </div> -->
                                 <div class="otpContainer">
-                                    <input type="text" [mask]="NumberMask" [dropSpecialCharacters]="false"
+                                    <input autofocus type="text" id="txtverify" [mask]="NumberMask"
+                                        [dropSpecialCharacters]="false" (keypress)="keytabVerify($event)"
                                         formControlName="mobileotp" [showMaskTyped]="showMask"
                                         (focus)="addMask($event);">
                                 </div>
                             </div>
-                            <button class=" btn btn-success mt-4" type="button"
+                            <button class=" btn btn-success mt-4" type="button" [ngClass]="{'btn-loading': VerifyStart}"
                                 (click)="verifyMobileOtp();">Verify</button>
                         </div>
                         <div class="form-group" *ngIf="mobileOTP">
@@ -83,13 +91,17 @@
                                 <label for="email">Your First and Last Name</label><span style="color:red">*</span>
                                 <input type="text" class="form-control" id="fname" formControlName="name" maxlength="50"
                                     autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
+
+                                <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
+                                    <div>First and Last Name is
+                                        required</div>
+                                </div>
                             </div>
 
-
                             <div class="form-group">
-
                                 <label>Business Type</label><span style="color:red">*</span>
-                                <select class="custom-select" formControlName="BusinessType"
+                                <select #SetFocus name="ddlBusinessType" class="custom-select"
+                                    formControlName="BusinessType"
                                     [ngClass]="{ 'is-invalid': submitted && f.BusinessType.errors }">
                                     <option value="">select</option>
                                     <option value="SoleProprietorship">Sole Proprietorship</option>
@@ -97,26 +109,34 @@
                                     <option value="PublicLimitedCompany">Public Limited Company</option>
                                     <option value="PrivateLimitedCompany">Private Limited Company</option>
                                     <option value="Other">Other</option>
-
-
                                 </select>
+
+                                <div *ngIf="submitted && f.BusinessType.errors" class="invalid-feedback">
+                                    <div>Business Type is
+                                        required</div>
+                                </div>
+
                             </div>
 
                             <div class="form-group">
                                 <label>Industry</label><span style="color:red">*</span>
                                 <select class="custom-select" formControlName="Industry"
-                                    [ngClass]="{ 'is-invalid': submitted && f.BusinessType.errors }">
+                                    [ngClass]="{ 'is-invalid': submitted && f.Industry.errors }">
                                     <option value="">select</option>
                                     <option value="Retail"> Retail (Fashion / Accessories)</option>
                                     <option value="Wholesale">Wholesale</option>
                                     <option value="Other">Other</option>
 
                                 </select>
-
+                                <div *ngIf="submitted && f.Industry.errors" class="invalid-feedback">
+                                    <div>Industry is
+                                        required</div>
+                                </div>
                             </div>
                             <div class="form-group">
                                 <label>Business License Type</label><span style="color:red">*</span>
-                                <select class="custom-select" formControlName="businessLicenseType"
+                                <select id="LicenseType" class="custom-select" formControlName="businessLicenseType"
+                                    (change)="ChangeLicenseType()"
                                     [ngClass]="{ 'is-invalid': submitted && f.businessLicenseType.errors }">
                                     <option value="">select</option>
                                     <option value="GSTIN"> Goods and Services Tax Identification Number (GSTIN)
@@ -124,29 +144,32 @@
                                     <option value="BusinessPAN">Business PAN</option>
                                     <option value="AadharCard">Aadhar Card</option>
                                 </select>
-
+                                <div *ngIf="submitted && f.businessLicenseType.errors" class="invalid-feedback">
+                                    <div>Business License Type is
+                                        required</div>
+                                </div>
                             </div>
 
                             <div class="form-group" *ngIf="f.businessLicenseType.value=='GSTIN'">
 
                                 <label for="email">GST Number</label><span style="color:red">*</span>
-                                <input type="text" class="form-control" id="PANNo" formControlName="GSTNo"
-                                    autocomplete="off" maxlength="15" placeholder="GST No"
-                                    [ngClass]="{ 'is-invalid': submitted && f.GSTNo.errors }">
+                                <input type="text" class="form-control" id="txtGSTNo" autocomplete="off" maxlength="15"
+                                    formControlName="GSTNo" placeholder="GST No">
                             </div>
+                           
+                         
+
                             <div class="form-group" *ngIf="f.businessLicenseType.value=='BusinessPAN'">
 
                                 <label for="email">PAN Number</label><span style="color:red">*</span>
-                                <input type="text" class="form-control" id="PANNo" formControlName="PANNo"
-                                    maxlength="10" placeholder="PAN No"
-                                    [ngClass]="{ 'is-invalid': submitted && f.PANNo.errors }">
+                                <input type="text" class="form-control" id="txtPANNo" maxlength="10"
+                                    placeholder="PAN No">
                             </div>
                             <div class="form-group" *ngIf="f.businessLicenseType.value=='AadharCard'">
 
                                 <label for="email">Aadhar Card</label><span style="color:red">*</span>
-                                <input type="text" class="form-control" id="AadharCard" formControlName="AadharCard"
-                                    autocomplete="off" maxlength="12" placeholder="Aadhar Card"
-                                    [ngClass]="{ 'is-invalid': submitted && f.AadharCard.errors }">
+                                <input type="text" class="form-control" id="txtAadharCard" autocomplete="off"
+                                    maxlength="12" placeholder="Aadhar Card">
                             </div>
                             <div class="form-group">
 
@@ -160,8 +183,9 @@
                             <div class="form-group">
 
                                 <label for="email">Business Phone</label><span style="color:red">*</span>
-                                <input type="text" class="form-control" id="BusinessPhone" maxlength="12"
-                                    formControlName="BusinessPhone"
+                                <input type="text" class="form-control" id="txtBusinessPhone" maxlength="10"
+                                    formControlName="BusinessPhone" [mask]="PhoneMask" [dropSpecialCharacters]="false"
+                                    [showMaskTyped]="showMask" (focus)="addPhoneMask($event);"
                                     [ngClass]="{ 'is-invalid': submitted && f.BusinessPhone.errors }">
                             </div>
                             <div class="form-group">
@@ -182,8 +206,9 @@
                             <div class="form-group">
 
                                 <label for="email">Pin Code</label><span style="color:red">*</span>
-                                <input type="text" class="form-control" id="PinCode" formControlName="pinCode"
-                                    autocomplete="off" maxlength="6"
+                                <input type="text" class="form-control" id="txtPinCode" formControlName="pinCode"
+                                    autocomplete="off" maxlength="6" [mask]="PinCodeMask"
+                                    [dropSpecialCharacters]="false" (focus)="addPinCodeMask($event);"
                                     [ngClass]="{ 'is-invalid': submitted && f.pinCode.errors }">
                             </div>
 
@@ -244,30 +269,37 @@
                             <div class="form-group">
                                 <label>Email ID</label><span style="color:red">*</span>
                                 <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="Email ID" maxlength="50"
-                                        autocomplete="off" [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
+                                    <input type="text" id="EmailID" class="form-control" placeholder="Email ID"
+                                        formControlName="email" maxlength="50" autocomplete="off"
+                                        [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
 
                                 </div>
+                                <br />
+                                <!-- <div *ngIf="(submitted) && f.email.errors.email" class="text text-danger">Email ID must
+                                    be a valid email address</div> -->
                             </div>
 
                             <div class="form-group">
 
                                 <label for="review">Password</label><span style="color:red">*</span>
                                 <div class="input-group">
-                                    <input type="{{inputType}}" class="form-control" id="review"
-                                        formControlName="password" autocomplete="off" maxlength="20"
+                                    <input type="{{inputType}}" class="form-control" id="review" id="password"
+                                        formControlName="password" autocomplete="off" maxlength="15"
                                         [ngClass]="{ 'is-invalid': submitted && f.password.errors }" required="">
                                     <div class="input-group-append frm-icon" (click)="hideShowPassword()">
                                         <span class="input-group-text">
                                             <i class="{{class}}"></i>
                                         </span>
                                     </div>
+
+                                </div>
+                                <br>
+                                <div *ngIf="(submitted) && RegistrationForm.controls.password.errors?.minlength"
+                                    class="text text-danger">
+                                    Password must be greater than 8 character.
                                 </div>
 
                             </div>
-
-
-
                             <div class="mt-3 text-center">
                                 <button class="btn btn-primary px-4" type="submit"
                                     (click)="CreateRegistration();">CREATE
