--- a/src/app/shop/product/sidebar/product-left-sidebar-with-set/product-left-sidebar-with-set.component.html
+++ b/src/app/shop/product/sidebar/product-left-sidebar-with-set/product-left-sidebar-with-set.component.html
@@ -147,7 +147,7 @@
                                         <th class="thead-dark">
                                             QUANTITY
                                         </th>
-                                        <th class="thead-dark">
+                                        <th class="thead-dark detail-column">
                                             Details
                                         </th>
 
