--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <ngx-loading-bar></ngx-loading-bar>
 <ngx-spinner [fullScreen]="true" type="ball-scale" size="large">
-    <p style="color: white" > Loading... </p>
+    <p style="color: white"> </p>
 </ngx-spinner>
-    <router-outlet></router-outlet>
-    <app-tap-to-top></app-tap-to-top>
-    <!-- <app-layout-box></app-layout-box> -->
+<router-outlet></router-outlet>
+<app-tap-to-top></app-tap-to-top>
+<!-- <app-layout-box></app-layout-box> -->
