--- a/src/app/shop/checkout/success/success.component.html
+++ b/src/app/shop/checkout/success/success.component.html
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <h4 class="mb-4">Your Order Details</h4>
                 <div class="order-box">
                     <div class="table-responsive-sm">
@@ -72,10 +72,12 @@
                                     <th class="thead-dark">
                                         Qty
                                     </th>
-                                    <th class="thead-dark" *ngIf="orderDetails[0].orderDetails?.additionalDiscount>0">
+                                    <th class="thead-dark"
+                                        *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0">
                                         Add. Discount (%)
                                     </th>
-                                    <th class="thead-dark" *ngIf="orderDetails[0].orderDetails?.additionalDiscount>0">
+                                    <th class="thead-dark"
+                                        *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0">
                                         Add. Discount Amount
                                     </th>
                                     <th class="thead-dark">
@@ -103,10 +105,10 @@
                                     <td>
                                         {{ product?.quantity }}
                                     </td>
-                                    <td *ngIf="orderDetails[0].orderDetails?.additionalDiscount>0">
+                                    <td *ngIf="product?.additionalDiscount>0">
                                         {{ product?.additionalDiscount }}%
                                     </td>
-                                    <td *ngIf="orderDetails[0].orderDetails?.additionalDiscount>0">
+                                    <td *ngIf="product?.additionalDiscountAmount>0">
                                         {{ product?.additionalDiscountAmount | currency:productService?.Currency.currency:'symbol'}}
                                     </td>
                                     <td>
@@ -125,8 +127,8 @@
                                     </td>
                                 </tr>
                                 <tr *ngIf='!orderDetails.length'>
-                                    <td colspan="9" *ngIf="orderDetails[0].orderDetails?.additionalDiscount>0"></td>
-                                    <td colspan="7" *ngIf="orderDetails[0].orderDetails?.additionalDiscount==0">
+                                    <td colspan="9" *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0"></td>
+                                    <td colspan="7" *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount==0">
                                         There are no products in cart
                                     </td>
                                 </tr>
@@ -134,9 +136,9 @@
                                     <td colspan="3">
                                         <b>Subtotal</b>
                                     </td>
-                                    <td *ngIf="orderDetails[0].orderDetails?.additionalDiscount>0">
+                                    <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0">
                                     </td>
-                                    <td *ngIf="orderDetails[0].orderDetails?.additionalDiscount>0">
+                                    <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0">
                                         <b>{{ getTotalAdditionalDiscountAmount() | currency:productService?.Currency.currency:'symbol'}}</b>
                                     </td>
                                     <td>
@@ -158,8 +160,8 @@
                                     <td colspan="5">
                                         <b> Packing</b>
                                     </td>
-                                    <td *ngIf="orderDetails[0].orderDetails?.additionalDiscount>0"></td>
-                                    <td *ngIf="orderDetails[0].orderDetails?.additionalDiscount>0"></td>
+                                    <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0"></td>
+                                    <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0"></td>
                                     <td colspan="2">
                                         <span
                                             style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
@@ -170,8 +172,8 @@
                                     <td colspan="5">
                                         <b>Total</b>
                                     </td>
-                                    <td *ngIf="orderDetails[0].orderDetails?.additionalDiscount>0"></td>
-                                    <td *ngIf="orderDetails[0].orderDetails?.additionalDiscount>0"></td>
+                                    <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0"></td>
+                                    <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0"></td>
                                     <td colspan="2">
                                         <span
                                             style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
