--- a/src/assets/scss/theme/_style.scss
+++ b/src/assets/scss/theme/_style.scss
@@ -134,7 +134,6 @@ h4 {
     text-transform: capitalize;
     font-weight: 400;
     letter-spacing: 0.03em;
-    line-height: 1;
 }
 
 h5 {
@@ -1286,6 +1285,7 @@ header {
                         right: 0;
                         max-height: 315px;
                         overflow: auto;
+                        border: #ececec 1px solid;
                         /* width */
                         &::-webkit-scrollbar {
                             width: 3px;
@@ -7774,7 +7774,7 @@ footer {
             position: relative;
             background-color: $grey-lighter;
             border: 1px solid $round-border;
-            padding: 40px;
+            padding: 1rem;
         }
         .check-out {
             .form-group {
@@ -14689,17 +14689,17 @@ a.btn-solid:not([href]):hover {
     box-shadow: none;
 }
 /* width */
-.thumbnail-imgs::-webkit-scrollbar {
+.thumbnail-imgs::-webkit-scrollbar, .mega-menu>li>div::-webkit-scrollbar {
     width: 6px;
   }
   
   /* Track */
-  .thumbnail-imgs::-webkit-scrollbar-track {
+  .thumbnail-imgs::-webkit-scrollbar-track, .mega-menu>li>div::-webkit-scrollbar-track {
     background: #ccc; 
   }
    
   /* Handle */
-  .thumbnail-imgs::-webkit-scrollbar-thumb {
+  .thumbnail-imgs::-webkit-scrollbar-thumb, .mega-menu>li>div::-webkit-scrollbar-thumb  {
     background: red; 
     border-radius: 10px;
   }
@@ -14726,7 +14726,14 @@ address p {
     box-shadow: 2px 2px 6px rgba(0,0,0,.3);
     margin-bottom: 1rem;
     .step-heading, .step-heading+div, .delivery-address {
-        padding: 1.5rem;
+        padding: 1rem;
+    }
+}
+@media (min-width: 578px) {
+    .checkout-steps {
+        .step-heading, .step-heading+div, .delivery-address {
+            padding: 1.5rem;
+        }
     }
 }
 .checkout-steps {
@@ -14737,4 +14744,26 @@ address p {
 }
 .delivery-address {
     border-bottom: 1px solid #ececec;
+}
+.price-details {
+    border: 1px solid #dddddd;
+    position: relative;
+}
+@media (min-width: 1024px) {
+    .price-details {
+        position: fixed;
+        width: 25%;
+    }
+}
+
+.secure-msg {
+    border-top: 1px solid #ececec;
+    padding-top: 1rem;
+    color: #777;
+    font-weight: 700;
+}
+.secure-msg img {
+    width: 30px;
+    float: left;
+    margin-right: 1rem;
 }
